test/corpus/qdoc.txt
==================
QDoc function documentation
==================

/*!
    \fn int add(int a, int b)
    \brief Adds two integers together.

    This method accepts \a a and \a b arguments to return their sum.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (inline_command
          (inline_command_name)
          (inline_text)))
      (markup
        (text))
      (markup
        (inline_command
          (inline_command_name)
          (inline_text)))
      (markup
        (text)))))

==================
QDoc class documentation
==================

/*!
    \class Calculator
    \brief The Calculator class provides basic arithmetic operations.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
Function with inline markup
==================

/*!
    \fn void calculate()
    \brief Performs calculation.

    Use \c calculate() to start. The result is \b important.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (inline_command
          (inline_command_name)
          (inline_text)))
      (markup
        (text))
      (markup
        (inline_command
          (inline_command_name)
          (inline_text)))
      (markup
        (text)))))

==================
QML type documentation
==================

/*!
    \qmltype Button
    \brief A clickable button.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
Trademark inline command with argument
==================

/*!
    \fn void setup()
    \brief Set up the application.

    Use the Qt \tm framework.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (inline_command
          (inline_command_name)
          (inline_text)))
      (markup
        (text)))))

==================
Block command with brace-delimited argument
==================

/*!
    \class {My Complex Class}
    \brief A class with a complex name.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))
==================
Link inline command - brace and bare forms
==================

/*!
    \fn void setup()
    \brief Sets up the application.

    See the \l {Qt Overview} for details.
    Use \l QWidget to create UI elements.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (inline_command
          (inline_command_name)
          (inline_text)))
      (markup
        (text))
      (markup
        (inline_command
          (inline_command_name)
          (inline_text)))
      (markup
        (text)))))

==================
Image block command and inlineimage inline command
==================

/*!
    \fn void display()
    \brief Displays the result.

    \image result-screenshot.png

    Use \inlineimage icon.png for the toolbar button.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (image_command
          (image_filename)))
      (markup
        (text))
      (markup
        (inlineimage_command
          (inline_text)))
      (markup
        (text)))))

==================
Image block command without alt text followed by prose
==================

/*!
    \image result-screenshot.png
    Some prose on the next line.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (image_command
          (image_filename)))
      (markup
        (text)))))

==================
Image block command with alt text
==================

/*!
    \image result-screenshot.png A screenshot of the result
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (image_command
          (image_filename)
          (image_alt_text)))
      (markup
        (text)))))

==================
Bold, italic, and underline inline commands
==================

/*!
    \fn void format()
    \brief Applies formatting.

    Use \bold important, \i italic, and \underline critical text.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (inline_command
          (inline_command_name)
          (inline_text)))
      (markup
        (text))
      (markup
        (inline_command
          (inline_command_name)
          (inline_text)))
      (markup
        (text))
      (markup
        (inline_command
          (inline_command_name)
          (inline_text)))
      (markup
        (text)))))

==================
Thread safety markers
==================

/*!
    \class QThread
    \brief A threading class.
    \threadsafe
    \reentrant
    \nonreentrant
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
QML modifier commands
==================

/*!
    \qmltype Foo
    \brief A foo type.
    \qmlabstract
    \qmldefault
    \instantiates QFoo
    \qmlenumeratorsfrom QFooEnum
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
Deprecated QML type aliases
==================

/*!
    \qmlclass OldName QOldName
    \brief Old-style class documentation.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
Code quoting and file inclusion commands
==================

/*!
    \fn void load()
    \brief Loads data.
    \snippet examples/main.cpp load-call
    \include shared/licensing.qdocinc
    \codeline int x = getValue();
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
File print and skip commands
==================

/*!
    \fn void parse()
    \brief Parses source.
    \quotefromfile examples/main.cpp
    \skipline //! [start]
    \printline int main
    \skipto class Widget
    \printto //! [end]
    \skipuntil //! [skip]
    \printuntil return 0;
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
Page subtitle and caption
==================

/*!
    \page overview.html
    \title Overview
    \subtitle A complete reference
    \brief An overview page.
    \caption Application architecture diagram.
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
Generated list commands
==================

/*!
    \page all-classes.html
    \title All Classes
    \generatelist annotatedclasses
    \annotatedlist classes
    \sincelist 6.5
    \noautolist
    \toc
    \tocentry Manual Entry
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
Type and module metadata commands
==================

/*!
    \class QWidget
    \brief A base widget class.
    \modulestate experimental
    \attribution Third Party Lib 1.2
    \meta keywords {widget, ui}
    \compares strong
    \compareswith QFrame
    \inheaderfile <QWidget>
    \notranslate
    \wrapper
    \default
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
CMake integration commands
==================

/*!
    \cmakepackage Qt6Core
    \brief Qt Core CMake package.
    \cmakecomponent Core
    \cmaketargetitem Qt6::Core
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text)))))

==================
Inline no-arg commands - br, dots, and ordered list item
==================

/*!
    \fn void display()
    \brief Displays content.

    Line one.\br Line two. With \dots and more.
    \list 1
    \o First item.
    \o Second item.
    \endlist
*/

---

(source_file
  (comment
    (block_comment
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (command
          (command_name)))
      (markup
        (text))
      (markup
        (block_command
          (list_block
            arg: (block_argument)
            (markup
              (text))
            (markup
              (command
                (command_name)))
            (markup
              (text))
            (markup
              (command
                (command_name)))
            (markup
              (text)))))
      (markup
        (text)))))
